CAGISWebsite/wwwroot/css/site.css
/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
for details on configuring this project to bundle and minify static web assets. */

a.navbar-brand {
  white-space: normal;
  text-align: center;
  word-break: break-all;
}

/* Provide sufficient contrast against white background */
a {
  color: #0366d6;
}

.btn-primary {
  color: #fff;
  background-color: #1b6ec2;
  border-color: #1861ac;
}

.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
  color: #fff;
  background-color: #1b6ec2;
  border-color: #1861ac;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
  font-size: 14px;
}
@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

.border-top {
  border-top: 1px solid #e5e5e5;
}
.border-bottom {
  border-bottom: 1px solid #e5e5e5;
}

.box-shadow {
  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
}

button.accept-policy {
  font-size: 1rem;
  line-height: inherit;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
    position: relative;
    min-height: 100%;
    background-color: #3FB954;
    
}

body {
    /* Margin bottom by footer height */
    margin-bottom: 60px;
}


.footer {
    position: absolute;
    bottom: 0;
    color: black;
    width: 100%;
    white-space: nowrap;
    line-height: 60px; /* Vertically center the text there */
    background-color: white;
}

#footerText {
    color: black;
}

div label input {
    margin-right: 100px;
}

body {
    font-family: sans-serif;
}

#ck-button {
    margin: 4px;
    background-color: #911;
    color: #fff;
    border-radius: 4px;
    border: 1px solid #D0D0D0;
    overflow: auto;
    float: left;
}

.navbar {
    height: 100% !important;
}

#ck-button:hover {
    background: red;
}

#ck-button label {
    float: left;
    width: 4.0em;
    margin-bottom: 0;
}

#ck-button label span {
    text-align: center;
    padding: 3px 0px;
    display: block;
}

#ck-button label input {
    position: absolute;
    display: none;
    height: 100%;
}

#ck-button input:checked + span {
    background-color: #EFEFEF;
    color: black;
}

#AdminTitle, #titleAllDYK, #titleAllContest, #titleAllBogs, #titleAllActivities, #titleCreateActivity, #titleCreateBlog, #titleCreateContest, #titleCreateDYK, #TitleEditActivity, #titleEditBlog, #titleEditContest, #titleEditDYK {
    padding-top: 10px;
    padding-bottom: 10px;
}


#h1Title{
    padding-top:10px;
}

#btnEditActivity, #btnDeleteActivity, #btnDeleteBlog, #btnEditBlog, #btnEditContest, #btnDeleteContest, #btnEditFact, #btnDeleteDYK {
    width: 100px;
    height: 35px;
}

#AllActivitesPage, #ButtonAdminPanel, #AllBlogPage, #AllContestsPage, #AllDYKPage, #CreateActivityPage, #CreateBlogPage, #CreateContestPage, #CreateDYKPage, #EditActivityPage, #EditBlogPage, #EditContestPage, #EditFactPage, #IndexPage, #ListOfEmployeesPage, #changePasswordPage, #HomePageId, #PrivacyPolicyPage, #sharedHomePage {
    background-color: #3FB954;
    
}

#btnEmployees, #btnAdminBlog, #btnAdminDYK, #btnAdminActivities, #btnAdminContests {
    width: 50%;
    margin: 0 auto;
    display: block;
}

#AdminTitle{
    padding-left: 25%;
}

#AllActivitesPage, #AllBlogPage, #AllContestsPage, #AllDYKPage {
    padding-left: 10%;
    padding-right: 10%;
}

#CreateActivityPage, #CreateBlogPage, #CreateContestPage, #CreateDYKPage, #EditActivityPage, #EditBlogPage, #EditContestPage, #EditFactPage, #changePasswordPage, #ListOfEmployeesPage, #LoginPage, #RegisterPage {
    margin-left: 5%;
    margin-right: 5%;
}


#DYKIcon{
    padding-bottom: 3%;
}



#txtNewPassword-error, #txtConfirmPassword-error, #txtActivityTitle-error, #txtActivityText-error, #txtBlogTitle-error, #txtBlogText-error, #txtContestTitle-error, #txtContestText-error,
#txtEmail-error, #dateContestStart-error, #dateContestEnd-error, #txtDYKTitle-error, #txtDYKText-error, #txtActivityTitle-error, #txtActivityText-error, #txtBlogTitle-error, #txtBlogText-error,
#txtEditContestTitle-error, #txtContestText-error, #txtEmail-error, #dateContestStart-error, #dateContestEnd-error, #imgImageUpload-error, txtDYKTitle-error, #txtDYKText-error
{
    color: #BB0D0D;
}

* {
    box-sizing: border-box;
}


.column {
    height: 30% 
}
.row{
    padding-top:2%;
}


.row:after {
    content: "";
    display: table;
    clear: both;
}

#LeftColm{
    width:20%;
}

#rightCol{
    width:75%;
    padding-left:3%;
}
#Icon, #DYKIcon{
    margin-top:2%;
    margin-left:20%;
    height:70%;
    width:70%;
}

#nullImgBlog, #imgsForBlogHome, #nullImgActivity, #imgsForActivitiyHome, #imgsForDYKHome, #nullImgDYK {
    margin-left:2%;
    width: 15%;
    object-fit:scale-down;
    background-color: #2777B2;
}

#HeadingTextForTable {
    font-size: 200%;
    margin-left: 2%;
}

#rowBlog, #rowActivities, #rowDYK {
    max-width: 100%;
}

